Abstract item and categories

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -10,3 +10,147 @@ COM_JSPACE_GD_LIBRARY="GD Library"
 COM_JSPACE_FFMPEG_LIBRARY="FFMPEG Library"
 COM_JSPACE_IS_INSTALLED="Installed"
 COM_JSPACE_IS_NOT_INSTALLED="Not Installed"
+
+
+
+COM_JSPACE_FIELDSET_CONFIG_REPOSITORY_OPTIONS_LABEL="Repository Settings"
+COM_JSPACE_FIELDSET_CONFIG_REPOSITORY_OPTIONS_DESC="Defines the connection to the repository."
+
+COM_JSPACE_FIELDSET_CONFIG_DSPACE_OPTIONS_LABEL="DSpace"
+COM_JSPACE_FIELDSET_CONFIG_DSPACE_OPTIONS_DESC="Defines the connection to DSpace repository, settings for the submission process and other repository-specific settings."
+
+COM_JSPACE_FIELDSET_CONFIG_FC_OPTIONS_LABEL="Fedora Core"
+COM_JSPACE_FIELDSET_CONFIG_FC_OPTIONS_DESC="Defines the connection to Fedora Corerepository, settings for the submission process and other repository-specific settings."
+
+COM_JSPACE_REPOSITORY_DRIVER_SELECT_LABEL="Select repository driver"
+COM_JSPACE_REPOSITORY_DRIVER_SELECT_DESCRIPTION="The driver that will be used to connect repository"
+COM_JSPACE_REPOSITORY_DRIVER_DSPACE="DSpace"
+COM_JSPACE_REPOSITORY_DRIVER_FC="Fedora Core"
+
+COM_JSPACE_REPOSITORY_BASE_URL_LABEL="DSpace Base URL"
+COM_JSPACE_REPOSITORY_REST_URL_LABEL="DSpace RESTful URL"
+COM_JSPACE_REPOSITORY_USERNAME_LABEL="Username"
+COM_JSPACE_REPOSITORY_USERNAME_DESC="A default username for RESTful authentication. Only required if any of the repository's communities require authentication."
+COM_JSPACE_REPOSITORY_PASSWORD_LABEL="Password"
+COM_JSPACE_REPOSITORY_PASSWORD_DESC="A default password for RESTful authentication. Only required if any of the repository's communities require authentication."
+COM_JSPACE_REPOSITORY_DEFAULTCOLLECTION_LABEL="Default Collection"
+COM_JSPACE_REPOSITORY_DEFAULTCOLLECTION_DESC="A default collection ID for RESTful."
+COM_JSPACE_REPOSITORY_STORAGEDIR_LABEL="Storage Directory"
+COM_JSPACE_REPOSITORY_STORAGEDIR_DESC="The submission storage relative path. For advanced users only."
+
+COM_JSPACE_SWORD_SERVICEDOCUMENT_URL_LABEL="SWORD Service Document"
+COM_JSPACE_SWORD_DEPOSIT_URL_LABEL="SWORD Deposit URL"
+COM_JSPACE_SWORD_EDIT_URL_LABEL="SWORD Edit URL"
+COM_JSPACE_SWORD_USERNAME_LABEL="Default Username"
+COM_JSPACE_SWORD_USERNAME_DESC="Only used when Submit on behalf of is enabled."
+COM_JSPACE_SWORD_PASSWORD_LABEL="Default Password"
+COM_JSPACE_SWORD_PASSWORD_DESC="Only used when Submit on behalf of is enabled."
+COM_JSPACE_SWORD_ON_BEHALF_OF_LABEL="Submit on behalf of"
+COM_JSPACE_SWORD_ON_BEHALF_OF_DESC="Submit items on behalf of all users using the default SWORD username and password."
+COM_JSPACE_SWORD_LEGAL_CONTENT_TYPES_LABEL="Legal Content Types"
+COM_JSPACE_SWORD_ILLEGAL_CONTENT_TYPES_LABEL="Illegal Content Types"
+COM_JSPACE_SWORD_MAX_BITSTREAM_SIZE_LABEL="Max Bitstream Size (bytes)"
+COM_JSPACE_SWORD_DEFAULT_COLLECTION_LABEL="Default Collection"
+
+COM_JSPACE_CONFIGURATION_SAVE_SUCCESSFUL="Configuration saved successfully."
+COM_JSPACE_JREST_LIBRARY="JSpace Library"
+COM_JSPACE_NOT_INSTALLED_JSPACE_LIBRARY="(Also check that the JRest and PHP CURL libraries are installed)"
+COM_JSPACE_GD_LIBRARY="GD Library"
+COM_JSPACE_FFMPEG_LIBRARY="FFMPEG Library"
+COM_JSPACE_IS_INSTALLED="Installed"
+COM_JSPACE_IS_NOT_INSTALLED="Not Installed"
+COM_JSPACE_CONFIGURATION="JSpace Options"
+
+COM_JSPACE_FIELDSET_USERMANAGEMENT_LABEL="User Management"
+COM_JSPACE_FIELDSET_USERMANAGEMENT_DESC="Manage the synchronisation of users and groups between Joomla and DSpace."
+COM_JSPACE_USERMANAGEMENT_DELETE_DSPACE_USER_LABEL="Synchronize User Deletion"
+COM_JSPACE_USERMANAGEMENT_DELETE_DSPACE_USER_DESC="Delete the corresponding DSpace user when a Joomla! user is deleted. The DSpace user will not be deleted if they have already archived items and you will need to log into the your DSpace site and delete the DSpace user directly."
+COM_JSPACE_GROUPMAPPINGS_LABEL="Group Mappings"
+COM_JSPACE_GROUPMAPPINGS_DESC="Map Joomla groups to corresponding DSpace groups."
+COM_JSPACE_GROUPMAPPINGS_NOTES="By mapping Joomla groups to DSpace groups you can ensure that your Joomla users can carry out the same actions as if they were logged into DSpace directly."
+COM_JSPACE_GROUPMAPPINGS_JOOMLA_GROUPS="Joomla! Groups"
+COM_JSPACE_GROUPMAPPINGS_DSPACE_GROUPS="DSpace Groups"
+COM_JSPACE_DSPACE_GROUPS_NOT_SELECTED="No mapping"
+
+COM_JSPACE_FIELDSET_GENERAL_LABEL="General configuration"
+COM_JSPACE_FIELDSET_GENERAL_DESC="General configuration"
+COM_JSPACE_GENERAL_ADMINEMAIL_LABEL="Administrator email"
+COM_JSPACE_GENERAL_ADMINEMAIL_DESC="An email shown to users when contacting administrator is required."
+
+COM_JSPACE_FIELDSET_NOTIFICATIONS_LABEL="User group notificaions"
+COM_JSPACE_FIELDSET_NOTIFICATIONS_DESC="Set groups that should be notified when certain events occur."
+COM_JSPACE_NOTIFICATIONS_ARCHIVE_LABEL="Group to notify on successfull item archive"
+COM_JSPACE_NOTIFICATIONS_ARCHIVE_DESC="Notification sent after item is successfully archived in dspace"
+COM_JSPACE_NOTIFICATIONS_ARCHIVE_NOTES=""
+COM_JSPACE_NOTIFICATIONS_ARCHIVERECURSIVE_LABEL="Notify users from subgroups"
+COM_JSPACE_NOTIFICATIONS_ARCHIVERECURSIVE_DESC="If checked, users that belong to subgroups of selected group will get the notification too."
+COM_JSPACE_NOTIFICATIONS_ARCHIVERECURSIVE_NOTES=""
+
+COM_JSPACE_ACCESS_DOWNLOAD_TITLE="Download"
+COM_JSPACE_ACCESS_DOWNLOAD_DESC="Download bundles and bitstreams"
+
+COM_JSPACE_ACCESS_SOCIALIZE_TITLE="Community Access"
+COM_JSPACE_ACCESS_SOCIALIZE_DESC="Communicate with other users and provide feedback on their submissions."
+
+COM_JSPACE_ACCESS_WORKFLOW_REVIEW_TITLE="Review Workflow Item"
+COM_JSPACE_ACCESS_WORKFLOW_REVIEW_GLOBAL_TITLE="Finalise Workflow Item"
+COM_JSPACE_ACCESS_WORKFLOW_VIEW_TITLE="View Workflow Item"
+COM_JSPACE_ACCESS_WORKFLOW_REVIEW_DESC="Review an existing item in the workflow. Includes edit privileges."
+COM_JSPACE_ACCESS_WORKFLOW_REVIEW_GLOBAL_DESC="2nd Tier review of an item in the workflow. Item will be committed to the archive once approved."
+COM_JSPACE_ACCESS_WORKFLOW_VIEW_DESC="View workflows in the pool and under review."
+
+COM_JSPACE_SUBMENU_COMMUNITIES="Communities"
+COM_JSPACE_SUBMENU_CONFIGURATION="Configuration"
+COM_JSPACE_SUBMENU_COLLECTIONS="Collections"
+COM_JSPACE_SUBMENU_USERS="User Synchronisation"
+COM_JSPACE_COMMUNITIES="Communities"
+COM_JSPACE_COMMUNITY_NEW="Community : New"
+COM_JSPACE_COMMUNITY_EDIT="Community : Edit"
+COM_JSPACE_NEW_COMMUNITY="New community"
+COM_JSPACE_EDIT_COMMUNITY="Edit community"
+COM_JSPACE_COMMUNITY_DELETED="Community successfully deleted."
+COM_JSPACE_NO_COMMUNITY_SELECTED="No community selected."
+COM_JSPACE_COMMUNITY_DELETE="Community : Delete"
+COM_JSPACE_DELETE_COMMUNITY_CONFIRM_DESC="<p>You are about to delete the community %s. This will permanently delete:
+    <ul>
+        <li>Any collections in the community that are not contained in other communities</li>
+        <li>Any items and incomplete submissions in this community that aren't contained in other communities</li>
+        <li>The contents of those items</li>
+        <li>All associated authorization policies</li>
+    </ul>
+</p>
+<p>If you would like to continue, please select Confirm from the toolbar.</p>"
+COM_JSPACE_TOOLBAR_CONFIRM="Confirm"
+
+COM_JSPACE_COLLECTIONS="Collections"
+
+COM_JSPACE_REQUIRED="<strong class="_QQ_"red"_QQ_">*</strong> Required field"
+COM_JSPACE_FIELD_NAME_LABEL="Name"
+COM_JSPACE_FIELD_NAME_DESC=""
+COM_JSPACE_FIELD_DESCRIPTION_LABEL="Description"
+COM_JSPACE_FIELD_DESCRIPTION_DESC=""
+COM_JSPACE_FIELD_INTRODUCTION_LABEL="Introductory Text"
+COM_JSPACE_FIELD_INTRODUCTION_DESC=""
+COM_JSPACE_FIELD_COPYRIGHT_LABEL="Copyright"
+COM_JSPACE_FIELD_COPYRIGHT_DESC=""
+COM_JSPACE_FIELD_PARENT_COMMUNITY_LABEL="Parent Community"
+COM_JSPACE_FIELD_PARENT_COMMUNITY_DESC="Select the parent of this community, root if the community has no parent."
+COM_JSPACE_COMMUNITY_ROOT="Root Community"
+COM_JSPACE_COMMUNITY_GROUP_ACCESS="DSpace Access Roles"
+COM_JSPACE_COMMUNITY_GROUP_ADMINISTRATOR="Administrators"
+
+COM_JSPACE_USERS_SYNCHRONIZE="Synchronise"
+COM_JSPACE_USER_SYNCED="Synchronised"
+COM_JSPACE_DSPACE_DETAILS="DSpace User"
+COM_JSPACE_DSPACE_ID="DSpace Id"
+
+COM_JSPACE_COLLECTION_NEW="Collection : New"
+COM_JSPACE_COLLECTION_EDIT="Collection : Edit"
+COM_JSPACE_NEW_COLLECTION="New Collection"
+COM_JSPACE_EDIT_COLLECTION="Edit Collection"
+COM_JSPACE_COLLECTION_GROUP_ADMINISTRATOR="Administrators"
+COM_JSPACE_COLLECTION_GROUP_SUBMITTERS="Submitters"
+COM_JSPACE_COLLECTION_GROUP_REGIONALREVIEWERS="Regional Reviewers"
+COM_JSPACE_COLLECTION_GROUP_GLOBALREVIEWERS="Global Reviewers"
+
+COM_JSPACE_COLLECTION_ERROR_CANNOT_FETCH="The collection could not be retrieved. If the problem persists, please contact the site's administrator. <a href='%s'>Refresh</a>"
