--- a/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
@@ -1,3 +1,24 @@
+COM_JSPACE_ITEM_NOT_FOUND="Item not found."
+COM_JSPACE_ITEM_METADATA_AUTHOR="Author"
+COM_JSPACE_ITEM_METADATA_CONTRIBUTOR="Contributor"
+COM_JSPACE_ITEM_METADATA_DATE_ACCESSIONED="Date accessioned"
+COM_JSPACE_ITEM_METADATA_DATE_AVAILABLE="Date available"
+COM_JSPACE_ITEM_METADATA_DATE_ISSUED="Date issued"
+COM_JSPACE_ITEM_METADATA_MEDIA_TYPE="Media type"
+COM_JSPACE_ITEM_METADATA_INSTITUTION="Institution"
+COM_JSPACE_ITEM_METADATA_TITLE="Title"
+COM_JSPACE_ITEM_METADATA_MATERIAL_TYPE="Material type"
+COM_JSPACE_ITEM_METADATA_MEDIA_TYPE_IMAGE_COLOURMODE="Image colour mode"
+COM_JSPACE_ITEM_METADATA_MEDIA_TYPE_IMAGE_COLOURDEPTH="Image colour depth"
+
+COM_JSPACE_ITEM_BUNDLE_TYPE_ORIGINAL="Original"
+COM_JSPACE_ITEM_BUNDLE_TYPE_ITEM_THUMBNAIL="Thumbnail"
+COM_JSPACE_ITEM_BUNDLE_TYPE_ITEM_LETTERBOX="Letterbox"
+COM_JSPACE_ITEM_BUNDLE_TYPE_PREVIEW="Preview"
+COM_JSPACE_ITEM_BUNDLE_TYPE_THUMBNAIL="Thumbnail"
+
+COM_JSPACE_CATEGORY_ROOT_NAME="Category Root"
+
 COM_JSPACE_COMMUNITIES_HEADING="DSpace Communities"
 COM_JSPACE_COMMUNITIES_SUBCOMMUNITIES_IN_COMMUNITY="Sub Communities"
 COM_JSPACE_COMMUNITIES_COLLECTIONS_IN_COMMUNITY="Collections"
