Items in categories

--- a/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
@@ -10,6 +10,11 @@ COM_JSPACE_ITEM_METADATA_TITLE="Title"
 COM_JSPACE_ITEM_METADATA_MATERIAL_TYPE="Material type"
 COM_JSPACE_ITEM_METADATA_MEDIA_TYPE_IMAGE_COLOURMODE="Image colour mode"
 COM_JSPACE_ITEM_METADATA_MEDIA_TYPE_IMAGE_COLOURDEPTH="Image colour depth"
+COM_JSPACE_ITEM_METADATA_DESCRIPTION="Description"
+COM_JSPACE_ITEM_METADATA_SUBJECT="Subject"
+COM_JSPACE_ITEM_METADATA_MEDIA_TYPE_AUDIO_BITRATE="Audio bitrate"
+COM_JSPACE_ITEM_METADATA_MEDIA_TYPE_AUDIO_FREQUENCY="Audio frequency"
+COM_JSPACE_ITEM_METADATA_MEDIA_TYPE_AUDIO_CHANNELS="Audio channels"
 
 COM_JSPACE_ITEM_BUNDLE_TYPE_ORIGINAL="Original"
 COM_JSPACE_ITEM_BUNDLE_TYPE_ITEM_THUMBNAIL="Thumbnail"
