--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -12,6 +12,11 @@ COM_JSPACE_IS_INSTALLED="Installed"
 COM_JSPACE_IS_NOT_INSTALLED="Not Installed"
 
 
+COM_JSPACE_REPOSITORY_SHOW_TRANSLATION_KEYS_LABEL="Show metadata translation keys if translaton missing"
+COM_JSPACE_REPOSITORY_SHOW_TRANSLATION_KEYS_DESC="If metadata key is missing show translation keys. Helpful when configuring new repository."
+
+COM_JSPACE_REPOSITORY_LIMIT_ITEMS_LABEL="Limit items list"
+COM_JSPACE_REPOSITORY_LIMIT_ITEMS_DESC=""
 
 COM_JSPACE_FIELDSET_CONFIG_REPOSITORY_OPTIONS_LABEL="Repository Settings"
 COM_JSPACE_FIELDSET_CONFIG_REPOSITORY_OPTIONS_DESC="Defines the connection to the repository."
