--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -43,6 +43,13 @@ COM_JSPACE_REPOSITORY_DEFAULTCOLLECTION_DESC="A default collection ID for RESTfu
 COM_JSPACE_REPOSITORY_STORAGEDIR_LABEL="Storage Directory"
 COM_JSPACE_REPOSITORY_STORAGEDIR_DESC="The submission storage relative path. For advanced users only."
 
+COM_JSPACE_REPOSITORY_FC_BASE_URL_LABEL="Fedora Core Base URL"
+COM_JSPACE_REPOSITORY_FC_REST_URL_LABEL="Fedora Core RESTful URL"
+COM_JSPACE_REPOSITORY_FC_USERNAME_LABEL="Username"
+COM_JSPACE_REPOSITORY_FC_PASSWORD_LABEL="Password"
+
+COM_JSPACE_REPOSITORY_CROSSWALK_LABEL="Crosswalk"
+
 COM_JSPACE_SWORD_SERVICEDOCUMENT_URL_LABEL="SWORD Service Document"
 COM_JSPACE_SWORD_DEPOSIT_URL_LABEL="SWORD Deposit URL"
 COM_JSPACE_SWORD_EDIT_URL_LABEL="SWORD Edit URL"
