--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -13,6 +13,8 @@ COM_JSPACE_IS_NOT_INSTALLED="Not Installed"
 
 COM_JSPACE_REPOSITORY_SHOW_TRANSLATION_KEYS_LABEL="Show metadata translation keys if translaton missing"
 COM_JSPACE_REPOSITORY_SHOW_TRANSLATION_KEYS_DESC="If metadata key is missing show translation keys. Helpful when configuring new repository."
+COM_JSPACE_REPOSITORY_SHOW_UNMAPPED_METADATA_LABEL="Show unmapped metadata"
+COM_JSPACE_REPOSITORY_UNMAPPED_METADATA_KEYS_DESC="If checked all metadata will be returned by item (not only metadata defined in crosswalk)"
 
 COM_JSPACE_REPOSITORY_LIMIT_ITEMS_LABEL="Limit items list"
 COM_JSPACE_REPOSITORY_LIMIT_ITEMS_DESC=""
