--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -1,5 +1,6 @@
 JSPACE="JSpace"
 COM_JSPACE="JSpace"
+COM_JSPACE_XML_DESCRIPTION="The JSpace component provides a method for displaying digital assets from an external repository system using the RESTful API."
 
 COM_JSPACE_BASE_URL="DSpace Base URL"
 COM_JSPACE_REST_URL="DSpace RESTful URL"
@@ -25,13 +26,13 @@ COM_JSPACE_FIELDSET_CONFIG_REPOSITORY_OPTIONS_DESC="Defines the connection to th
 COM_JSPACE_FIELDSET_CONFIG_DSPACE_OPTIONS_LABEL="DSpace"
 COM_JSPACE_FIELDSET_CONFIG_DSPACE_OPTIONS_DESC="Defines the connection to DSpace repository, settings for the submission process and other repository-specific settings."
 
-COM_JSPACE_FIELDSET_CONFIG_FC_OPTIONS_LABEL="Fedora Core"
-COM_JSPACE_FIELDSET_CONFIG_FC_OPTIONS_DESC="Defines the connection to Fedora Corerepository, settings for the submission process and other repository-specific settings."
+COM_JSPACE_FIELDSET_CONFIG_FC_OPTIONS_LABEL="Fedora Commons"
+COM_JSPACE_FIELDSET_CONFIG_FC_OPTIONS_DESC="Defines the connection to Fedora Commons repository, settings for the submission process and other repository-specific settings."
 
 COM_JSPACE_REPOSITORY_DRIVER_SELECT_LABEL="Select repository driver"
 COM_JSPACE_REPOSITORY_DRIVER_SELECT_DESCRIPTION="The driver that will be used to connect repository"
 COM_JSPACE_REPOSITORY_DRIVER_DSPACE="DSpace"
-COM_JSPACE_REPOSITORY_DRIVER_FC="Fedora Core"
+COM_JSPACE_REPOSITORY_DRIVER_FC="Fedora Commons"
 
 COM_JSPACE_REPOSITORY_BASE_URL_LABEL="DSpace Base URL"
 COM_JSPACE_REPOSITORY_REST_URL_LABEL="DSpace RESTful URL"
@@ -44,8 +45,8 @@ COM_JSPACE_REPOSITORY_DEFAULTCOLLECTION_DESC="A default collection ID for RESTfu
 COM_JSPACE_REPOSITORY_STORAGEDIR_LABEL="Storage Directory"
 COM_JSPACE_REPOSITORY_STORAGEDIR_DESC="The submission storage relative path. For advanced users only."
 
-COM_JSPACE_REPOSITORY_FC_BASE_URL_LABEL="Fedora Core Base URL"
-COM_JSPACE_REPOSITORY_FC_REST_URL_LABEL="Fedora Core RESTful URL"
+COM_JSPACE_REPOSITORY_FC_BASE_URL_LABEL="Fedora Commons Base URL"
+COM_JSPACE_REPOSITORY_FC_REST_URL_LABEL="Fedora Commons RESTful URL"
 COM_JSPACE_REPOSITORY_FC_USERNAME_LABEL="Username"
 COM_JSPACE_REPOSITORY_FC_PASSWORD_LABEL="Password"
 
