--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
@@ -1,10 +1,15 @@
 JSPACE="JSpace"
 COM_JSPACE="JSpace"
-COM_JSPACE_ITEM_LAYOUT_TITLE="A Single Repository Item"
-COM_JSPACE_ITEM_LAYOUT_DESC="The Item Layout displays a single item from the repository."
-COM_JSPACE_COLLECTION_LAYOUT_TITLE="A Single Collection"
-COM_JSPACE_COLLECTION_LAYOUT_DESC="The Collection Layout displays a single Collection."
-COM_JSPACE_COMMUNITIES_LAYOUT_TITLE="Communities and Collections"
-COM_JSPACE_COMMUNITIES_LAYOUT_DESC="A display for all communities and collections within a repository"
-COM_JSPACE_COMMUNITY_LAYOUT_TITLE="A Single Community"
-COM_JSPACE_COMMUNITY_LAYOUT_DESC="The Community Layout displays a single Community."
+COM_JSPACE_XML_DESCRIPTION="The JSpace component provides a method for displaying digital assets from a external repository system using the RESTful API."
+
+COM_JSPACE_ITEM_VIEW_DEFAULT_TITLE="Single Repository Item"
+COM_JSPACE_ITEM_LAYOUT_TITLE="Single Repository Item"
+COM_JSPACE_ITEM_LAYOUT_DESC="Display a single repository item. Used for displaying an SEF url for each item."
+
+COM_JSPACE_CATEGORIES_VIEW_DEFAULT_TITLE="Category List"
+COM_JSPACE_CATEGORIES_LAYOUT_TITLE="Category List"
+COM_JSPACE_CATEGORIES_LAYOUT_DESC="Display a list of categories. Categories are groupings of items, presented in a generic way."
+
+COM_JSPACE_TREE_VIEW_DEFAULT_TITLE="Category Tree"
+COM_JSPACE_TREE_LAYOUT_TITLE="Category Tree"
+COM_JSPACE_TREE_LAYOUT_DESC="Display categories in a tree structure."
