--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
@@ -14,3 +14,5 @@ COM_JSPACE_TREE_VIEW_DEFAULT_TITLE="Category Tree"
 COM_JSPACE_TREE_LAYOUT_TITLE="Category Tree"
 COM_JSPACE_TREE_LAYOUT_DESC="Display categories in a tree structure."
 
+COM_JSPACE_OAI_LAYOUT_TITLE="OAI item"
+COM_JSPACE_OAI_LAYOUT_DESC=""
