--- a/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
@@ -36,3 +36,29 @@ COM_JSPACE_DC_SUBJECT_LABEL="Subject"
 COM_JSPACE_DC_COLLECTION_LABEL="Appears in Collection"
 COM_JSPACE_BITSTREAM_PREVIEW="Preview"
 COM_JSPACE_BITSTREAM_DOWNLOAD="Download"
+
+
+
+
+
+
+
+COM_JSPACE_OAI_PMH_EXCEPTION_BAD_VERB="Value of the verb argument is not a legal OAI-PMH verb, the verb argument is missing, or the verb argument is repeated. (verb=%s)"
+COM_JSPACE_OAI_PMH_EXCEPTION_BAD_VERB_XML_MSG="Illegal OAI verb"
+
+COM_JSPACE_OAI_PMH_EXCEPTION_BAD_ARGUMENT="The request includes illegal arguments, is missing required arguments, includes a repeated argument, or values for arguments have an illegal syntax."
+COM_JSPACE_OAI_PMH_EXCEPTION_BAD_ARGUMENT_XML_MSG="The request includes illegal arguments, is missing required arguments, includes a repeated argument, or values for arguments have an illegal syntax."
+
+COM_JSPACE_OAI_PMH_EXCEPTION_BAD_RESUMPTION_TOKEN="The value of the resumptionToken argument is invalid or expired."
+
+COM_JSPACE_OAI_PMH_EXCEPTION_ID_DOES_NOT_EXIST="The value of the identifier argument is unknown or illegal in this repository. id=%s"
+COM_JSPACE_OAI_PMH_EXCEPTION_ID_DOES_NOT_EXIST_XML_MSG="The value of the identifier argument is unknown or illegal in this repository."
+
+COM_JSPACE_OAI_PMH_EXCEPTION_CANNOT_DISSEMINATE_FORMAT="The metadata format identified by the value given for the metadataPrefix argument is not supported by the item or by the repository. metadataPrefix=%s"
+COM_JSPACE_OAI_PMH_EXCEPTION_CANNOT_DISSEMINATE_FORMAT_XML_MSG="The metadata format identified by the value given for the metadataPrefix argument is not supported by the item or by the repository."
+
+
+
+
+
+
