OAI verb Identify

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -100,6 +100,19 @@ COM_JSPACE_NOTIFICATIONS_ARCHIVERECURSIVE_LABEL="Notify users from subgroups"
 COM_JSPACE_NOTIFICATIONS_ARCHIVERECURSIVE_DESC="If checked, users that belong to subgroups of selected group will get the notification too."
 COM_JSPACE_NOTIFICATIONS_ARCHIVERECURSIVE_NOTES=""
 
+COM_JSPACE_FIELDSET_OAI_LABEL="OAI"
+COM_JSPACE_FIELDSET_OAI_DESCRIPTION="OAI setup"
+COM_JSPACE_FIELD_OAI_ENABLED_LABEL="Enable OAI"
+COM_JSPACE_FIELD_OAI_ENABLED_DESCRIPTION="Should JSpace enable OAI functionality"
+COM_JSPACE_FIELD_OAI_REPOSITORY_NAME_LABEL="Repository name"
+COM_JSPACE_FIELD_OAI_REPOSITORY_NAME_DESCRIPTION="JSpace repository name returned by Identify"
+COM_JSPACE_FIELD_OAI_EARLIEST_DATESTAMP_LABEL="Earliest datestamp"
+COM_JSPACE_FIELD_OAI_EARLIEST_DATESTAMP_DESCRIPTION="Date of the earliest item that will be returned by OAI"
+COM_JSPACE_FIELD_OAI_GRANULARITY_LABEL="Date granularity"
+COM_JSPACE_FIELD_OAI_GRANULARITY_DESCRIPTION="Set date granularity: day, or second"
+COM_JSPACE_FIELD_OAI_ADMINISTRATORS_EMAILS_LABEL="OAI administrators' emails"
+COM_JSPACE_FIELD_OAI_ADMINISTRATORS_EMAILS_DESCRIPTION="OAI administrators' emails divided by ';'."
+
 COM_JSPACE_ACCESS_DOWNLOAD_TITLE="Download"
 COM_JSPACE_ACCESS_DOWNLOAD_DESC="Download bundles and bitstreams"
 
