ListIdentifiers  - no date selection  - no resumptionToken

--- a/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
@@ -57,7 +57,8 @@ COM_JSPACE_OAI_PMH_EXCEPTION_ID_DOES_NOT_EXIST_XML_MSG="The value of the identif
 COM_JSPACE_OAI_PMH_EXCEPTION_CANNOT_DISSEMINATE_FORMAT="The metadata format identified by the value given for the metadataPrefix argument is not supported by the item or by the repository. metadataPrefix=%s"
 COM_JSPACE_OAI_PMH_EXCEPTION_CANNOT_DISSEMINATE_FORMAT_XML_MSG="The metadata format identified by the value given for the metadataPrefix argument is not supported by the item or by the repository."
 
-
+COM_JSPACE_OAI_PMH_EXCEPTION_NO_RECORDS_MATCH="The combination of the values of the from, until, set and metadataPrefix arguments results in an empty list."
+COM_JSPACE_OAI_PMH_EXCEPTION_NO_RECORDS_MATCH_XML_MSG="The combination of the values of the from, until, set and metadataPrefix arguments results in an empty list."
 
 
 
