--- a/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
@@ -50,6 +50,7 @@ COM_JSPACE_OAI_PMH_EXCEPTION_BAD_ARGUMENT="The request includes illegal argument
 COM_JSPACE_OAI_PMH_EXCEPTION_BAD_ARGUMENT_XML_MSG="The request includes illegal arguments, is missing required arguments, includes a repeated argument, or values for arguments have an illegal syntax."
 
 COM_JSPACE_OAI_PMH_EXCEPTION_BAD_RESUMPTION_TOKEN="The value of the resumptionToken argument is invalid or expired."
+COM_JSPACE_OAI_PMH_EXCEPTION_BAD_RESUMPTION_TOKEN_XML_MSG="The value of the resumptionToken argument is invalid or expired."
 
 COM_JSPACE_OAI_PMH_EXCEPTION_ID_DOES_NOT_EXIST="The value of the identifier argument is unknown or illegal in this repository. id=%s"
 COM_JSPACE_OAI_PMH_EXCEPTION_ID_DOES_NOT_EXIST_XML_MSG="The value of the identifier argument is unknown or illegal in this repository."
