--- a/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
@@ -61,6 +61,7 @@ COM_JSPACE_OAI_PMH_EXCEPTION_CANNOT_DISSEMINATE_FORMAT_XML_MSG="The metadata for
 COM_JSPACE_OAI_PMH_EXCEPTION_NO_RECORDS_MATCH="The combination of the values of the from, until, set and metadataPrefix arguments results in an empty list."
 COM_JSPACE_OAI_PMH_EXCEPTION_NO_RECORDS_MATCH_XML_MSG="The combination of the values of the from, until, set and metadataPrefix arguments results in an empty list."
 
-
+COM_JSPACE_OAI_PMH_EXCEPTION_NO_METADATA_FORMATS="There are no metadata formats available for the specified item."
+COM_JSPACE_OAI_PMH_EXCEPTION_NO_METADATA_FORMATS_XML_MSG="There are no metadata formats available for the specified item."
 
 
