Added JSpaceFormFieldRegisteredCacheDrivers form field to list all cache instances registered with JSpace.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -51,6 +51,8 @@ COM_JSPACE_REPOSITORY_FC_USERNAME_LABEL="Username"
 COM_JSPACE_REPOSITORY_FC_PASSWORD_LABEL="Password"
 
 COM_JSPACE_REPOSITORY_CROSSWALK_LABEL="Crosswalk"
+COM_JSPACE_REPOSITORY_CACHE_ENABLED_LABEL="Enable cache"
+COM_JSPACE_REPOSITORY_CACHE_INSTANCE_LABEL="Cache instance"
 
 COM_JSPACE_SWORD_SERVICEDOCUMENT_URL_LABEL="SWORD Service Document"
 COM_JSPACE_SWORD_DEPOSIT_URL_LABEL="SWORD Deposit URL"
