JSPACE-69 New jspace native storage added.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -88,85 +88,69 @@ COM_JSPACE_GROUPMAPPINGS_JOOMLA_GROUPS="Joomla! Groups"
 COM_JSPACE_GROUPMAPPINGS_DSPACE_GROUPS="DSpace Groups"
 COM_JSPACE_DSPACE_GROUPS_NOT_SELECTED="No mapping"
 
-COM_JSPACE_FIELDSET_GENERAL_LABEL="General configuration"
-COM_JSPACE_FIELDSET_GENERAL_DESC="General configuration"
-COM_JSPACE_GENERAL_ADMINEMAIL_LABEL="Administrator email"
-COM_JSPACE_GENERAL_ADMINEMAIL_DESC="An email shown to users when contacting administrator is required."
+COM_JSPACE_CPANEL_TITLE="JSpace"
+COM_JSPACE_DATAOBJECTS_TITLE="JSpace: Data Objects"
+COM_JSPACE_PAGE_ADD_DATAOBJECT="JSpace: Add New Data Object"
+COM_JSPACE_PAGE_EDIT_DATAOBJECT="JSpace: Edit Data Object"
 
-COM_JSPACE_FIELDSET_NOTIFICATIONS_LABEL="User group notificaions"
-COM_JSPACE_FIELDSET_NOTIFICATIONS_DESC="Set groups that should be notified when certain events occur."
-COM_JSPACE_NOTIFICATIONS_ARCHIVE_LABEL="Group to notify on successfull item archive"
-COM_JSPACE_NOTIFICATIONS_ARCHIVE_DESC="Notification sent after item is successfully archived in dspace"
-COM_JSPACE_NOTIFICATIONS_ARCHIVE_NOTES=""
-COM_JSPACE_NOTIFICATIONS_ARCHIVERECURSIVE_LABEL="Notify users from subgroups"
-COM_JSPACE_NOTIFICATIONS_ARCHIVERECURSIVE_DESC="If checked, users that belong to subgroups of selected group will get the notification too."
-COM_JSPACE_NOTIFICATIONS_ARCHIVERECURSIVE_NOTES=""
+COM_JSPACE_DATAOBJECTS_HEADING_ASSOCIATION="Association"
+COM_JSPACE_DATAOBJECTS_HEADING_CREATED_BY="Contributed By"
+COM_JSPACE_DATAOBJECTS_PARENT_TITLE_LABEL="Parent"
 
-COM_JSPACE_ACCESS_DOWNLOAD_TITLE="Download"
-COM_JSPACE_ACCESS_DOWNLOAD_DESC="Download bundles and bitstreams"
+COM_JSPACE_N_ITEMS_CHECKED_IN_0="No data object successfully checked in"
+COM_JSPACE_N_ITEMS_CHECKED_IN_1="%d data object successfully checked in"
+COM_JSPACE_N_ITEMS_CHECKED_IN_MORE="%d data objects successfully checked in"
 
-COM_JSPACE_ACCESS_SOCIALIZE_TITLE="Community Access"
-COM_JSPACE_ACCESS_SOCIALIZE_DESC="Communicate with other users and provide feedback on their submissions."
+COM_JSPACE_N_ITEMS_PUBLISHED="%s data objects published."
+COM_JSPACE_N_ITEMS_PUBLISHED_1="%s data object published."
+COM_JSPACE_N_ITEMS_UNPUBLISHED="%s data objects unpublished."
+COM_JSPACE_N_ITEMS_UNPUBLISHED_1="%s data object unpublished."
 
-COM_JSPACE_ACCESS_WORKFLOW_REVIEW_TITLE="Review Workflow Item"
-COM_JSPACE_ACCESS_WORKFLOW_REVIEW_GLOBAL_TITLE="Finalise Workflow Item"
-COM_JSPACE_ACCESS_WORKFLOW_VIEW_TITLE="View Workflow Item"
-COM_JSPACE_ACCESS_WORKFLOW_REVIEW_DESC="Review an existing item in the workflow. Includes edit privileges."
-COM_JSPACE_ACCESS_WORKFLOW_REVIEW_GLOBAL_DESC="2nd Tier review of an item in the workflow. Item will be committed to the archive once approved."
-COM_JSPACE_ACCESS_WORKFLOW_VIEW_DESC="View workflows in the pool and under review."
+COM_JSPACE_N_ITEMS_ARCHIVED="%s data objects archived."
+COM_JSPACE_N_ITEMS_ARCHIVED_1="%s data object archived."
 
-COM_JSPACE_SUBMENU_COMMUNITIES="Communities"
-COM_JSPACE_SUBMENU_CONFIGURATION="Configuration"
-COM_JSPACE_SUBMENU_COLLECTIONS="Collections"
-COM_JSPACE_SUBMENU_USERS="User Synchronisation"
-COM_JSPACE_COMMUNITIES="Communities"
-COM_JSPACE_COMMUNITY_NEW="Community : New"
-COM_JSPACE_COMMUNITY_EDIT="Community : Edit"
-COM_JSPACE_NEW_COMMUNITY="New community"
-COM_JSPACE_EDIT_COMMUNITY="Edit community"
-COM_JSPACE_COMMUNITY_DELETED="Community successfully deleted."
-COM_JSPACE_NO_COMMUNITY_SELECTED="No community selected."
-COM_JSPACE_COMMUNITY_DELETE="Community : Delete"
-COM_JSPACE_DELETE_COMMUNITY_CONFIRM_DESC="<p>You are about to delete the community %s. This will permanently delete:
-    <ul>
-        <li>Any collections in the community that are not contained in other communities</li>
-        <li>Any items and incomplete submissions in this community that aren't contained in other communities</li>
-        <li>The contents of those items</li>
-        <li>All associated authorization policies</li>
-    </ul>
-</p>
-<p>If you would like to continue, please select Confirm from the toolbar.</p>"
-COM_JSPACE_TOOLBAR_CONFIRM="Confirm"
+COM_JSPACE_N_ITEMS_TRASHED="%s data objects trashed."
+COM_JSPACE_N_ITEMS_TRASHED_1="%s data objects trashed."
 
-COM_JSPACE_COLLECTIONS="Collections"
+COM_JSPACE_N_ITEMS_DELETED="%s data objects deleted."
+COM_JSPACE_N_ITEMS_DELETED_1="%s data object deleted."
 
-COM_JSPACE_REQUIRED="<strong class="_QQ_"red"_QQ_">*</strong> Required field"
-COM_JSPACE_FIELD_NAME_LABEL="Name"
-COM_JSPACE_FIELD_NAME_DESC=""
-COM_JSPACE_FIELD_DESCRIPTION_LABEL="Description"
-COM_JSPACE_FIELD_DESCRIPTION_DESC=""
-COM_JSPACE_FIELD_INTRODUCTION_LABEL="Introductory Text"
-COM_JSPACE_FIELD_INTRODUCTION_DESC=""
-COM_JSPACE_FIELD_COPYRIGHT_LABEL="Copyright"
-COM_JSPACE_FIELD_COPYRIGHT_DESC=""
-COM_JSPACE_FIELD_PARENT_COMMUNITY_LABEL="Parent Community"
-COM_JSPACE_FIELD_PARENT_COMMUNITY_DESC="Select the parent of this community, root if the community has no parent."
-COM_JSPACE_COMMUNITY_ROOT="Root Community"
-COM_JSPACE_COMMUNITY_GROUP_ACCESS="DSpace Access Roles"
-COM_JSPACE_COMMUNITY_GROUP_ADMINISTRATOR="Administrators"
+COM_JSPACE_WARNING_PROVIDE_VALID_NAME="Please provide a valid, non-blank title."
 
-COM_JSPACE_USERS_SYNCHRONIZE="Synchronise"
-COM_JSPACE_USER_SYNCED="Synchronised"
-COM_JSPACE_DSPACE_DETAILS="DSpace User"
-COM_JSPACE_DSPACE_ID="DSpace Id"
+COM_JSPACE_DATAOBJECT_DETAILS_LABEL="Details"
+COM_JSPACE_DATAOBJECT_PUBLISHING_LABEL="Publishing"
+COM_JSPACE_DATAOBJECT_METADATA_LABEL="Metadata"
 
-COM_JSPACE_COLLECTION_NEW="Collection : New"
-COM_JSPACE_COLLECTION_EDIT="Collection : Edit"
-COM_JSPACE_NEW_COLLECTION="New Collection"
-COM_JSPACE_EDIT_COLLECTION="Edit Collection"
-COM_JSPACE_COLLECTION_GROUP_ADMINISTRATOR="Administrators"
-COM_JSPACE_COLLECTION_GROUP_SUBMITTERS="Submitters"
-COM_JSPACE_COLLECTION_GROUP_REGIONALREVIEWERS="Regional Reviewers"
-COM_JSPACE_COLLECTION_GROUP_GLOBALREVIEWERS="Global Reviewers"
+COM_JSPACE_DATAOBJECT_TITLE_LABEL="Title"
+COM_JSPACE_DATAOBJECT_TITLE_DESC="A title to refer to the data object by."
+COM_JSPACE_DATAOBJECT_SCHEMA_LABEL="Schema"
+COM_JSPACE_DATAOBJECT_SCHEMA_DESC="Schema"
+COM_JSPACE_DATAOBJECT_LANGUAGE_DESC="The language that the data object is assigned to."
+COM_JSPACE_DATAOBJECT_PUBLISH_UP_LABEL="Start Publishing"
+COM_JSPACE_DATAOBJECT_PUBLISH_UP_DESC="An optional date to Start Publishing the article."
+COM_JSPACE_DATAOBJECT_PUBLISH_DOWN_LABEL="Finish Publishing"
+COM_JSPACE_DATAOBJECT_PUBLISH_DOWN_DESC="An optional date to Finish Publishing the article."
+COM_JSPACE_DATAOBJECT_CREATED_BY_DESC="Select the name of the user who created the data object."
+COM_JSPACE_DATAOBJECT_CREATED_BY_LABEL="Contributed by"
+COM_JSPACE_DATAOBJECT_CREATED_DESC="Created Date"
+COM_JSPACE_DATAOBJECT_CREATED_LABEL="Created Date"
+COM_JSPACE_DATAOBJECT_MODIFIED_DESC="The date and time that the data object was last modified."
+COM_JSPACE_DATAOBJECT_VERSION_LABEL="Revision"
+COM_JSPACE_DATAOBJECT_VERSION_DESC="Current Revision"
+COM_JSPACE_DATAOBJECT_HITS_DESC="Number of page views."
 
-COM_JSPACE_COLLECTION_ERROR_CANNOT_FETCH="The collection could not be retrieved. If the problem persists, please contact the site's administrator. <a href='%s'>Refresh</a>"
+COM_JSPACE_DATAOBJECT_SCHEMA_DATAOBJECT_LABEL="Data Object"
+COM_JSPACE_DATAOBJECT_SCHEMA_DATAOBJECT_DESC="A default data object for storing metadata."
+COM_JSPACE_DATAOBJECT_SCHEMA_DATASTREAMOBJECT_LABEL="Data Stream Object"
+COM_JSPACE_DATAOBJECT_SCHEMA_DATASTREAMOBJECT_DESC="A default data stream object for storing a file and its associated information."
+
+COM_JSPACE_DATAOBJECT_METADATA_TITLE_LABEL="Title"
+COM_JSPACE_DATAOBJECT_METADATA_AUTHOR_LABEL="Author"
+COM_JSPACE_DATAOBJECT_METADATA_DESCRIPTION_LABEL="Description"
+
+COM_JSPACE_SELECT_DATAOBJECT="Select a data object"
+COM_JSPACE_CHANGE_DATAOBJECT="Select or change data object"
+
+COM_JSPACE_SUBMENU_CPANEL="Dashboard"
+COM_JSPACE_SUBMENU_CATEGORIES="Categories"
+COM_JSPACE_SUBMENU_DATAOBJECTS="Data Objects"
