--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
@@ -13,3 +13,7 @@ COM_JSPACE_CATEGORIES_LAYOUT_DESC="Display a list of categories. Categories are 
 COM_JSPACE_TREE_VIEW_DEFAULT_TITLE="Category Tree"
 COM_JSPACE_TREE_LAYOUT_TITLE="Category Tree"
 COM_JSPACE_TREE_LAYOUT_DESC="Display categories in a tree structure."
+
+COM_JSPACE_CPANEL="Dashboard"
+COM_JSPACE_CATEGORIES="Categories"
+COM_JSPACE_DATAOBJECTS="Data Objects"
