--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -2,6 +2,28 @@ JSPACE="JSpace"
 COM_JSPACE="JSpace"
 COM_JSPACE_XML_DESCRIPTION="The JSpace component provides a method for displaying digital assets from an external repository system using the RESTful API."
 
+COM_JSPACE_STORAGE_EXTRACT_LABEL="Extract File Metadata"
+COM_JSPACE_STORAGE_EXTRACT_DESC="Yes to extract the file metadata, no otherwise. It is recommended file metadata extraction is set up."
+COM_JSPACE_STORAGE_BUNDLES_LABEL="Bundles to extract"
+COM_JSPACE_STORAGE_BUNDLES_DESC="A comma-delimited list of bundles which will contain files to be extracted. Bundle names must match form field ids in the stream fields group."
+COM_JSPACE_STORAGE_EXTRACTOR_LABEL="Extractor"
+COM_JSPACE_STORAGE_EXTRACTOR_DESC="Extract metadata from the file using either a dedicated extraction server (Apache Tika) or the existing Solr server."
+COM_JSPACE_STORAGE_EXTRACTOR_LOCAL="Local Tika"
+COM_JSPACE_STORAGE_EXTRACTOR_REMOTE="Remote Tika"
+COM_JSPACE_STORAGE_EXTRACTOR_SOLR="Solr Server"
+COM_JSPACE_STORAGE_LOCALTIKA_APPPATH_LABEL="Local Tika Application path"
+COM_JSPACE_STORAGE_LOCALTIKA_APPPATH_DESC="The path to the Tika executable. Only used if the extractor is set to Local Tika."
+COM_JSPACE_STORAGE_REMOTETIKA_HOST_LABEL="Remote Tika Host"
+COM_JSPACE_STORAGE_REMOTETIKA_HOST_DESC="The Tika host URL. Only used if the extractor is set to Remote Tika."
+COM_JSPACE_STORAGE_REMOTETIKA_PORT_LABEL="Remote Tika Port"
+COM_JSPACE_STORAGE_REMOTETIKA_PORT_DESC="The Tika connection port. Only used if the extractor is set to Remote Tika."
+COM_JSPACE_STORAGE_REMOTETIKA_USERNAME_LABEL="Remote Tika Username"
+COM_JSPACE_STORAGE_REMOTETIKA_USERNAME_DESC="The Tika username. Only used if the extractor is set to Remote Tika."
+COM_JSPACE_STORAGE_REMOTETIKA_PASSWORD_LABEL="Remote Tika Password"
+COM_JSPACE_STORAGE_REMOTETIKA_PASSWORD_DESC="The Tika password. Only used if the extractor is set to Remote Tika."
+COM_JSPACE_STORAGE_REMOTETIKA_PATH_LABEL="Remote Tika Path"
+COM_JSPACE_STORAGE_REMOTETIKA_PATH_DESC="The Tika path. Only used if the extractor is set to Remote Tika."
+
 COM_JSPACE_BASE_URL="DSpace Base URL"
 COM_JSPACE_REST_URL="DSpace RESTful URL"
 COM_JSPACE_REST_USERNAME="Username"
@@ -119,7 +141,10 @@ COM_JSPACE_WARNING_PROVIDE_VALID_NAME="Please provide a valid, non-blank title."
 
 COM_JSPACE_DATAOBJECT_DETAILS_LABEL="Details"
 COM_JSPACE_DATAOBJECT_PUBLISHING_LABEL="Publishing"
+
 COM_JSPACE_DATAOBJECT_METADATA_LABEL="Metadata"
+COM_JSPACE_DATASTREAMOBJECT_METADATA_LABEL="Metadata"
+COM_JSPACE_DATASTREAMOBJECT_STREAM_LABEL="File"
 
 COM_JSPACE_DATAOBJECT_TITLE_LABEL="Title"
 COM_JSPACE_DATAOBJECT_TITLE_DESC="A title to refer to the data object by."
