JSPACE-69 Add/delete an asset

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -185,12 +185,15 @@ COM_JSPACE_RECORD_SCHEMA_BASIC_DESC="A basic record for storing metadata only."
 COM_JSPACE_RECORD_SCHEMA_BASICASSETS_LABEL="Basic Record with Assets"
 COM_JSPACE_RECORD_SCHEMA_BASICASSETS_DESC="A basic record for storing metadata and one or more files."
 
-COM_JSPACE_METADATA_LABEL="Metadata"
-COM_JSPACE_FILES_LABEL="Files"
-
 COM_JSPACE_RECORD_METADATA_TITLE_LABEL="Title"
 COM_JSPACE_RECORD_METADATA_AUTHOR_LABEL="Author"
 COM_JSPACE_RECORD_METADATA_DESCRIPTION_LABEL="Description"
+
+COM_JSPACE_RECORD_ASSET_DELETED="Asset deleted."
+COM_JSPACE_RECORD_ASSET_DOESNOTEXISTS="Asset does not exist."
+
+COM_JSPACE_METADATA_LABEL="Metadata"
+COM_JSPACE_FILES_LABEL="Files"
 
 COM_JSPACE_SELECT_RECORD="Select a record"
 COM_JSPACE_CHANGE_RECORD="Select or change record"
@@ -199,6 +202,8 @@ COM_JSPACE_SUBMENU_CPANEL="Dashboard"
 COM_JSPACE_SUBMENU_CATEGORIES="Categories"
 COM_JSPACE_SUBMENU_RECORDS="Records"
 
+COM_JSPACE_ERROR_UNABLETOLOADRECORD="Unable to load record."
+COM_JSPACE_ERROR_UNABLETOLOADASSET="Unable to load asset."
 COM_JSPACE_ERROR_WARNUPLOADTOOLARGE="The total size of all files being uploaded is too large."
 COM_JSPACE_ERROR_WARNFILETYPENOTALLOWED="The file %s's type %s is not supported."
 COM_JSPACE_ERROR_WARNFILETOOLARGE="This file is too large to upload."
@@ -208,4 +213,4 @@ COM_JSPACE_ERROR_CREATE_STORAGE_PATH="Unable to create storage path."
 COM_JSPACE_ERROR_MOVE_FILE="Unable to move file."
 COM_JSPACE_ERROR_PUBLISHDOWN_LT="The Finish Publishing date must be newer than Start Publishing."
 
-COM_JSPACE_FATAL_NOBUNDLE="No bundle specified for %s." 
+COM_JSPACE_ERROR_NODERIVATIVE="No derivative specified for %s." 
