JSPACE-69 Use asset metadata for record metadata.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -192,6 +192,8 @@ COM_JSPACE_RECORD_METADATA_DESCRIPTION_LABEL="Description"
 COM_JSPACE_RECORD_ASSET_DELETED="Asset deleted."
 COM_JSPACE_RECORD_ASSET_DOESNOTEXISTS="Asset does not exist."
 
+COM_JSPACE_RECORD_ASSET_METADATA_USED="Asset's metadata saved to record."
+
 COM_JSPACE_METADATA_LABEL="Metadata"
 COM_JSPACE_FILES_LABEL="Files"
 
@@ -214,3 +216,8 @@ COM_JSPACE_ERROR_MOVE_FILE="Unable to move file."
 COM_JSPACE_ERROR_PUBLISHDOWN_LT="The Finish Publishing date must be newer than Start Publishing."
 
 COM_JSPACE_ERROR_NODERIVATIVE="No derivative specified for %s." 
+
+COM_JSPACE_FORMFIELD_ASSET_METADATA_TITLE="Use Metadata"
+COM_JSPACE_FORMFIELD_ASSET_METADATA_DESC="Use the asset's metadata as the record's metadata."
+COM_JSPACE_FORMFIELD_ASSET_DELETE_TITLE="Delete"
+COM_JSPACE_FORMFIELD_ASSET_DELETE_DESC="Delete the asset."
