JSPACE-70 Reset harvester. Reset counter. Metadata loading correctly.

--- a/plugins/jspace/oai/language/en-GB/en-GB.plg_jspace_oai.ini
+++ b/plugins/jspace/oai/language/en-GB/en-GB.plg_jspace_oai.ini
@@ -8,4 +8,6 @@ archive. Can be an absolute or relative path. Can contain JPATH_ROOT although it
 outside the Joomla! directory for security reasons."
 PLG_JSPACE_OAI_FOLLOWON_LABEL="Follow On"
 PLG_JSPACE_OAI_FOLLOWON_DESC="The number of seconds to wait before retrieving the next page of OAI results if there are 
-resumption tokens detected."
+resumption tokens detected. Setting this number too low could result in your domain or IP address being blocked due to too many requests."
+PLG_JSPACE_OAI_REQUESTFAILURES_LABEL="Request Failures"
+PLG_JSPACE_OAI_REQUESTFAILURES_DESC="The number of times the harvester can fail before it gives up. Setting this number too high could result in your domain or IP address being blocked due to too many requests."
