JSPACE-73 S3/Glacier support.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -214,6 +214,7 @@ COM_JSPACE_ERROR_FILE_EXISTS="File already exists"
 COM_JSPACE_ERROR_CREATE_STORAGE_PATH="Unable to create storage path."
 COM_JSPACE_ERROR_MOVE_FILE="Unable to move file."
 COM_JSPACE_ERROR_PUBLISHDOWN_LT="The Finish Publishing date must be newer than Start Publishing."
+COM_JSPACE_ERROR_UPLOAD_DUPLICATE="Duplicate asset %s uploaded."
 
 COM_JSPACE_ERROR_NODERIVATIVE="No derivative specified for %s." 
 
