Refactor events to use default Joomla versions.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -204,6 +204,7 @@ COM_JSPACE_SUBMENU_CPANEL="Dashboard"
 COM_JSPACE_SUBMENU_CATEGORIES="Categories"
 COM_JSPACE_SUBMENU_RECORDS="Records"
 
+COM_JSPACE_ERROR_VIRUSDETECTED="Virus detected in file %s."
 COM_JSPACE_ERROR_UNABLETOLOADRECORD="Unable to load record."
 COM_JSPACE_ERROR_UNABLETOLOADASSET="Unable to load asset."
 COM_JSPACE_ERROR_WARNUPLOADTOOLARGE="The total size of all files being uploaded is too large."
