Language updates/license cleanup.

--- a/plugins/joai/ore/language/en-GB/en-GB.plg_joai_ore.ini
+++ b/plugins/joai/ore/language/en-GB/en-GB.plg_joai_ore.ini
@@ -1,2 +1,2 @@
-PLG_OAI_ORE="JOAI - ORE"
-PLG_OAI_ORE_XML_DESCRIPTION="Provides caching mechanisms for ORE/Atom-based assets."
+PLG_JOAI_ORE="JOAI - ORE"
+PLG_JOAI_ORE_XML_DESCRIPTION="Provides caching mechanisms for ORE/Atom-based assets."
