--- a/plugins/joai/oaidc/language/en-GB/en-GB.plg_joai_oaidc.sys.ini
+++ b/plugins/joai/oaidc/language/en-GB/en-GB.plg_joai_oaidc.sys.ini
@@ -1,2 +1,2 @@
-PLG_OAI_OAIDC="JOAI - OAI DC"
-PLG_OAI_OAIDC_XML_DESCRIPTION="Provides caching mechanisms for OAI DC-formatted metadata."
+PLG_JOAI_OAIDC="JOAI - OAI DC"
+PLG_JOAI_OAIDC_XML_DESCRIPTION="Provides caching mechanisms for OAI DC-formatted metadata."
