--- a/plugins/joai/qdc/language/en-GB/en-GB.plg_joai_qdc.ini
+++ b/plugins/joai/qdc/language/en-GB/en-GB.plg_joai_qdc.ini
@@ -1,2 +1,2 @@
-PLG_OAI_QDC="JOAI - QDC"
-PLG_OAI_QDC_XML_DESCRIPTION="Provides caching mechanisms for Qualified Dublin Core or QDC-formatted metadata."
+PLG_JOAI_QDC="JOAI - QDC"
+PLG_JOAI_QDC_XML_DESCRIPTION="Provides caching mechanisms for Qualified Dublin Core or QDC-formatted metadata."
