Table restructure. S3 and Asset Store downloading.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -219,6 +219,7 @@ COM_JSPACE_ERROR_UPLOAD_DUPLICATE="Duplicate asset %s uploaded."
 
 COM_JSPACE_ERROR_NODERIVATIVE="No derivative specified for %s." 
 
+COM_JSPACE_FORMFIELD_ASSET_DOWNLOAD_TITLE="Download"
 COM_JSPACE_FORMFIELD_ASSET_METADATA_TITLE="Use Metadata"
 COM_JSPACE_FORMFIELD_ASSET_METADATA_DESC="Use the asset's metadata as the record's metadata."
 COM_JSPACE_FORMFIELD_ASSET_DELETE_TITLE="Delete"
