--- a/plugins/content/jspaceassetstore/language/en-GB/en-GB.plg_content_jspaceassetstore.ini
+++ b/plugins/content/jspaceassetstore/language/en-GB/en-GB.plg_content_jspaceassetstore.ini
@@ -11,3 +11,5 @@ PLG_CONTENT_JSPACEASSETSTORE_WARNING_FILEDELETEFAILED="The file could not be del
 
 PLG_CONTENT_JSPACEASSETSTORE_ERROR_CREATE_STORAGE_PATH="Asset store plugin failed to create storage path %s."
 PLG_CONTENT_JSPACEASSETSTORE_ERROR_COPY_FILE="Could not copy asset store file %s to permanent storage."
+
+PLG_CONTENT_JSPACEASSETSTORE_DOWNLOAD_LABEL="Download"
