JSPACE-69 Manage frontend schema access per category.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -224,3 +224,13 @@ COM_JSPACE_FORMFIELD_ASSET_METADATA_TITLE="Use Metadata"
 COM_JSPACE_FORMFIELD_ASSET_METADATA_DESC="Use the asset's metadata as the record's metadata."
 COM_JSPACE_FORMFIELD_ASSET_DELETE_TITLE="Delete"
 COM_JSPACE_FORMFIELD_ASSET_DELETE_DESC="Delete the asset."
+
+PLG_CONTENT_JSPACESCHEMAS_FIELD_SCHEMAS_LABEL="Frontend Schema Access"
+PLG_CONTENT_JSPACESCHEMAS_FIELD_SCHEMAS_DESC="Specify which schemas a group of users can choose from when submitting new records to this category via the front end."
+PLG_CONTENT_JSPACESCHEMAS_FIELDSET_NOTES="Select which metadata schemas should used by a particular group of users.<br/><em>Inherited</em> means that the group will use the schema setting from a parent group. The <em>Calculated setting</em> will specify what is being inherited."
+COM_JSPACE_SCHEMAS_SCHEMA="Schema"
+COM_JSPACE_SCHEMAS_NEWSETTING="Select setting"
+COM_JSPACE_SCHEMAS_CALCULATEDSETTING="Calculated setting"
+COM_JSPACE_SCHEMA_INHERITED="Inherited"
+COM_JSPACE_SCHEMA_USE="Use"
+COM_JSPACE_SCHEMA_DONTUSE="Don't use"
