--- a/plugins/content/oai/language/en-GB/en-GB.plg_content_oai.ini
+++ b/plugins/content/oai/language/en-GB/en-GB.plg_content_oai.ini
@@ -23,7 +23,7 @@ PLG_CONTENT_JOAI_METADATA_ASSETS="Metadata with assets"
 
 PLG_CONTENT_OAI_FIELDSET_LABEL="OAI Settings"
 PLG_CONTENT_OAI_FIELDSET_DESC="You can configure a category to harvest its JSpace metadata from another archive. When JSpace harvests information from another archive, it will attempt to find the metadata schema with the highest fidelity to ensure that harvested metadata contains as much information as possible. When harvesting assets or links to assets, the source archive must support the ORE or RDF schema in order to complete successfully."
-PLG_CONTENT_OAI_FIELD_URL_LABEL="Url"
+PLG_CONTENT_OAI_FIELD_URL_LABEL="URL"
 PLG_CONTENT_OAI_FIELD_URL_DESC="The OAI-compatible URL to harvest. Do not include any verb querystrings."
 PLG_CONTENT_OAI_FIELD_HARVEST_LABEL="Harvest Type"
 PLG_CONTENT_OAI_FIELD_HARVEST_DESC="Specify what should be harvested. Should the harvest only include metadata, or should it include links to the assets or even duplicate the assets in the destination archive."
